--- a/Beleza Crespa - Projeto Final/agendamento.html
+++ b/Beleza Crespa - Projeto Final/agendamento.html
@@ -48,9 +48,7 @@
       <button type="submit">Agendar</button>
     </form>
   </main>
-  <footer>
-    <p>&copy; 2025 Beleza Crespa - Com Direitos Autorais - Bell Santos</p>
-  </footer>
+  
 
   <!-- VLibras -->
   <div vw class="enabled">
@@ -64,4 +62,7 @@
     new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 </body>
+<footer class="f1">
+  <p>&copy; 2025 Beleza Crespa - Com Direitos Autorais - Bell Santos</p>
+</footer>
 </html>
